fixed not being able to click submit button if screen height is too small

--- a/css/style.css
+++ b/css/style.css
@@ -703,6 +703,9 @@ z-index: -99;
 	}
 	#signup-form {
 		width: 100%;
+		height: 100vh;
+		overflow: scroll;
+		padding-bottom: 10px;
 	}
 	#signup-form label {
 		display: block;
